<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YourCast</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="broadcast_game">BROADCAST</string>
    <string name="enter_game_info">Enter Game Info</string>
    <string name="watch_game">WATCH</string>
    <string name="live_games">Live Games</string>
    <string name="existing_games">Existing Games</string>
    <string name="what_do_you_want_to_broadcast">What do you want to broadcast?</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="time">Time</string>
    <string name="not_started">Game Not Started</string>
    <string name="game_info_title">Game Info</string>
    <string name="game_score_label">Game Score</string>
    <string name="game_time_label">Game Time</string>
    <string name="dummy">Dummy Text</string>
    <string name="game_password">Enter Password</string>

    <color name="green">#458B00</color>
    <color name="orange">#FF6103</color>
    <color name="black">#000000</color>

    <string name="server_addr">http://yourcast-server.appspot.com</string>

    <string name="session_pass">Session password</string>

</resources>